# python-module-02

./: README.md
src/ex00/: ft_filter.py  ft_map.py  ft_reduce.py
src/ex01/: main.py
src/ex02/: logger.py
src/ex03/: csvreader.py
src/ex04/: README.md  pyproject.toml  setup.cfg
src/ex04/src/my_minipack/: logger.py  progressbar.py
src/ex05/: TinyStatistician.py
test/: test_ex00.py  test_ex01.py  test_ex03.py  test_ex05.py
